# RSS_reading2

./: .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json
docs/: design.md  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: cento.icns
src-tauri/resources/nature-skills/nature-downloader/: .gitattributes  LICENSE
src-tauri/resources/nature-skills/nature-downloader/agents/: openai.yaml
src-tauri/resources/nature-skills/nature-downloader/examples/: carsi-retry-template.tsv  manifest-template.tsv  publisher-verification-template.tsv
src-tauri/resources/nature-skills/nature-downloader/scripts/: batch_download.mjs  cento_cdp_proxy.mjs  (+1 more)
src-tauri/src/: db.rs  db_migrations.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: briefing_cmd.rs  entry_cmd.rs  feed_cmd.rs  fetch_cmd.rs  mod.rs  nature_download_cmd.rs  opml_cmd.rs  paper_chat_cmd.rs  paper_graph_cmd.rs  pmc_gallery_cmd.rs  pubmed_cmd.rs  pubmed_conversion_cmd.rs  pubmed_search_cmd.rs  reading_cmd.rs  sci_review_cmd.rs  sci_skill_cmd.rs  screening_cmd.rs  settings_cmd.rs  translate_cmd.rs  tray_cmd.rs  update_cmd.rs
src-tauri/src/services/: article_service.rs  briefing_service.rs  cost_service.rs  entry_identity_service.rs  entry_service.rs  feed_service.rs  fetch_service.rs  fulltext_service.rs  google_translate_xlsx_service.rs  journal_metrics_service.rs  mod.rs  nature_download_service.rs  notify.rs  opml_service.rs  paper_chat_service.rs  paper_graph_service.rs  pmc_gallery_search_service.rs  pmc_gallery_service.rs  pubmed_author_query_service.rs  pubmed_conversion_service.rs  pubmed_search_service.rs  pubmed_service.rs  reading_service.rs  scheduler.rs  sci_review_service.rs  sci_skill_service.rs  screening_scope_service.rs  screening_state_service.rs  screening_xlsx_service.rs  settings_service.rs  translate_service.rs  translation_pipeline.rs  update_service.rs
(+80 files in other folders)
