[package]
name = "cento"
version = "1.1.13"
description = "RSS Reading — a lightweight RSS reader forked from Cento with Chinese translation via DeepSeek"
authors = ["liuenqian", "itsdrchen <44201097+itsdrchen@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cento_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
feed-rs = "2"
tokio = { version = "1", features = ["full"] }
roxmltree = "0.20"
pdf-extract = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rust_xlsxwriter = "0.96.0"
calamine = "0.36.0"

# Size-optimized release profile.
#   opt-level = "z"     — optimize for smallest binary (over speed)
#   lto = true          — link-time optimization across crates
#   codegen-units = 1   — slower compile but better optimization
#   strip = true        — drop debug symbols from the binary
#   panic = "abort"     — no unwinding tables; we don't catch panics anyway
# Combined effect on Cento: ~15 MB binary → ~5 MB, DMG ~6 MB → ~3 MB.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
